--- a/svm_working_file.ipynb
+++ b/svm_working_file.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMfbL71amA85LSETl8DJW5g",
+      "authorship_tag": "ABX9TyOle6FG5OTJAyfwaEpwqPR3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 50,
       "metadata": {
         "id": "kJV8u-aIL0o9"
       },
@@ -37,7 +37,9 @@
         "import sklearn\n",
         "from sklearn import datasets\n",
         "from sklearn import svm\n",
-        "from sklearn.model_selection import train_test_split\n"
+        "from sklearn.model_selection import train_test_split\n",
+        "from sklearn.neighbors import KNeighborsClassifier  \n",
+        "import sklearn.metrics as metrics\n"
       ]
     },
     {
@@ -48,7 +50,7 @@
       "metadata": {
         "id": "WHKEqzEuL_sE"
       },
-      "execution_count": 10,
+      "execution_count": 51,
       "outputs": []
     },
     {
@@ -61,9 +63,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "mix0ZNYzbamr",
-        "outputId": "947a6b0f-290e-49d1-8203-f57bbff12193"
+        "outputId": "646b3153-4f3f-4da6-ad10-df1acd2b8048"
       },
-      "execution_count": 11,
+      "execution_count": 52,
       "outputs": [
         {
           "output_type": "stream",
@@ -92,9 +94,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "hkXQH_jjbiJW",
-        "outputId": "00546ac0-a63b-4f42-af54-c86f46a5f2e8"
+        "outputId": "d5127868-0313-4102-8710-20eaa1274d41"
       },
-      "execution_count": 12,
+      "execution_count": 53,
       "outputs": [
         {
           "output_type": "stream",
@@ -114,7 +116,7 @@
       "metadata": {
         "id": "2pjxz1HBbyo8"
       },
-      "execution_count": 13,
+      "execution_count": 54,
       "outputs": []
     },
     {
@@ -130,54 +132,75 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "zoDLTX_0brGu",
-        "outputId": "a7002034-8a4f-4f27-9d10-50bacff34521"
+        "outputId": "72b46c2b-833a-466d-e887-a4fac8d3edcd"
       },
-      "execution_count": 17,
+      "execution_count": 55,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[[1.324e+01 2.013e+01 8.687e+01 ... 1.357e-01 2.845e-01 1.249e-01]\n",
-            " [1.422e+01 2.312e+01 9.437e+01 ... 1.772e-01 5.166e-01 1.446e-01]\n",
-            " [1.167e+01 2.002e+01 7.521e+01 ... 8.120e-02 3.206e-01 8.950e-02]\n",
+            "[[1.805e+01 1.615e+01 1.202e+02 ... 2.102e-01 3.751e-01 1.108e-01]\n",
+            " [1.189e+01 1.736e+01 7.620e+01 ... 8.946e-02 2.220e-01 6.033e-02]\n",
+            " [1.825e+01 1.998e+01 1.196e+02 ... 1.932e-01 3.063e-01 8.368e-02]\n",
             " ...\n",
-            " [1.429e+01 1.682e+01 9.030e+01 ... 3.333e-02 2.458e-01 6.120e-02]\n",
-            " [1.955e+01 2.321e+01 1.289e+02 ... 1.825e-01 2.576e-01 7.602e-02]\n",
-            " [1.727e+01 2.542e+01 1.124e+02 ... 1.739e-01 2.500e-01 7.944e-02]] [1 0 1 1 1 1 0 0 0 1 1 0 0 0 1 0 0 1 0 0 1 1 1 1 1 0 1 1 1 1 0 1 1 1 1 0 0\n",
-            " 1 0 1 0 1 1 1 0 1 0 1 1 1 1 1 1 1 0 1 0 1 1 1 0 1 0 1 0 1 1 0 1 0 1 1 1 0\n",
-            " 1 0 1 1 0 1 1 1 0 1 1 1 1 1 0 0 1 1 0 0 1 1 0 1 1 1 0 0 1 0 0 1 1 1 1 1 0\n",
-            " 1 1 0 1 1 1 0 1 0 1 1 1 1 1 0 1 0 1 1 1 0 1 1 0 0 1 1 1 1 0 1 0 0 1 1 1 1\n",
-            " 1 1 0 1 0 0 0 1 1 0 0 0 1 0 0 1 1 0 1 1 0 0 1 0 0 0 0 0 1 1 0 1 1 0 1 1 1\n",
-            " 1 0 1 1 0 1 0 0 1 1 1 1 1 1 0 1 0 0 1 1 1 1 0 1 1 1 1 1 1 1 1 1 1 1 0 1 1\n",
-            " 0 0 0 1 1 1 1 0 0 0 0 0 0 0 1 1 1 0 1 0 0 1 1 0 0 1 1 1 0 1 1 1 1 1 1 1 1\n",
-            " 0 1 1 1 1 0 1 1 1 1 0 1 1 0 1 0 0 1 1 1 1 1 1 1 1 0 1 1 1 1 0 1 0 1 0 1 0\n",
-            " 1 1 1 1 0 1 1 1 1 1 1 0 1 0 1 0 1 1 0 1 1 1 1 0 0 0 0 1 1 1 1 1 0 0 1 1 1\n",
-            " 1 1 1 1 1 1 1 0 0 1 0 1 0 1 0 0 1 0 0 1 1 1 1 1 1 1 1 1 1 1 0 0 0 1 1 1 0\n",
-            " 1 1 0 0 0 1 1 0 1 0 0 1 1 0 1 1 0 0 1 1 1 0 0 0 0 0 1 0 0 0 0 0 0 1 1 1 0\n",
-            " 1 1 1 1 1 1 1 0 0 0 1 1 1 0 1 0 0 1 0 0 1 0 1 1 1 1 1 1 1 1 1 1 0 1 1 1 1\n",
-            " 0 1 1 1 1 1 1 1 1 0 0]\n"
+            " [1.227e+01 2.997e+01 7.742e+01 ... 0.000e+00 2.409e-01 6.743e-02]\n",
+            " [1.497e+01 1.976e+01 9.550e+01 ... 5.754e-02 2.646e-01 6.085e-02]\n",
+            " [1.016e+01 1.959e+01 6.473e+01 ... 2.232e-02 2.262e-01 6.742e-02]] [0 1 0 0 0 1 0 1 1 1 0 0 1 0 0 0 1 1 1 1 1 0 1 1 0 1 1 0 1 1 1 0 0 0 0 0 1\n",
+            " 0 0 1 1 1 0 0 0 1 1 1 1 1 0 0 1 1 1 0 1 1 1 0 1 0 1 1 1 0 1 0 1 1 0 1 1 1\n",
+            " 0 1 1 1 1 1 0 0 1 1 1 0 1 1 0 0 0 1 0 1 0 1 0 1 1 1 0 1 0 0 0 0 1 0 1 0 0\n",
+            " 1 0 1 0 0 1 1 0 1 1 1 0 0 1 0 1 1 0 1 0 1 0 1 0 1 0 1 1 1 1 0 0 0 1 1 1 1\n",
+            " 1 0 0 1 0 0 1 1 1 1 1 1 1 1 1 1 0 0 1 1 0 1 1 1 0 1 1 1 0 1 1 1 1 0 1 1 1\n",
+            " 1 0 1 1 1 0 1 1 0 1 1 0 1 1 1 1 1 1 1 1 0 1 1 1 1 1 1 1 0 0 1 1 1 0 1 0 1\n",
+            " 1 1 0 1 1 1 1 0 1 1 1 0 0 1 1 0 1 1 1 1 1 0 0 1 1 0 0 1 1 1 1 1 0 1 1 0 0\n",
+            " 0 0 0 1 1 0 1 1 1 0 0 0 1 1 0 0 0 1 1 0 0 0 1 1 1 0 0 0 1 1 0 1 1 1 0 1 0\n",
+            " 1 1 0 1 0 0 0 1 1 1 1 0 0 1 0 0 1 0 0 1 0 1 0 1 0 1 0 0 1 1 1 1 0 1 0 1 1\n",
+            " 1 1 1 1 0 1 1 1 1 1 0 0 1 0 1 1 0 0 1 1 0 1 0 0 0 0 1 1 1 0 0 1 1 1 0 1 1\n",
+            " 1 1 0 0 1 1 0 1 1 1 0 0 0 0 0 1 0 0 0 1 1 1 1 0 1 0 1 1 0 1 1 1 1 0 1 0 1\n",
+            " 1 1 1 0 1 1 1 0 1 1 1 0 0 0 1 1 0 1 0 1 1 1 0 1 0 0 1 0 1 1 1 1 0 0 1 1 1\n",
+            " 1 0 1 1 1 0 1 1 1 1 1]\n"
           ]
         }
       ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "clf = svm.SVC(kernel=\"linear\")\n",
+        "\n",
+        "clf.fit(x_train, y_train) \n",
+        "\n",
+        "y_pred = clf.predict(x_test)"
+      ],
       "metadata": {
         "id": "-Pu10w3gch87"
       },
-      "execution_count": null,
+      "execution_count": 85,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "acc = metrics.accuracy_score(y_test, y_pred)\n",
+        "print(acc)"
+      ],
       "metadata": {
-        "id": "Xk4YDkrVbxod"
+        "id": "Xk4YDkrVbxod",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "ee7c4b0a-ea11-4006-8af7-8f3c1a8157d0"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 86,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0.9298245614035088\n"
+          ]
+        }
+      ]
     }
   ]
 }
